# sportreader

./: .gitignore  CMakeLists.txt  README.md  config.h.in
cmake/: FindPCRE.cmake
config/: stdio_config.h  stdlib_config.h
lib/: activity.c  activity.h  activityLap.c  activityLap.h  activityList.c  activityList.h  flags.c  flags.h  iso8601.c  iso8601.h  log.c  log.h  mss.c  mss.h  numparse.c  numparse.h  position.c  position.h  public.h  tcd.c  tcd.h  time_config.c  time_config.h  track.c  track.h  trackpoint.c  trackpoint.h  util.c  util.h  xml.c  xml.h
msvc/: getopt.h
res/: sportreader.rc.in  sportreader_resource.h
src/: main.c  strlist.c  strlist.h
